--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 5000 --hot "
+    "dev": "webpack-dev-server --open --port 3000 --hot --host 127.0.0.1"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-component": "^0.10.1",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -27,7 +27,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^14.2.4",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
@@ -35,11 +35,11 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.9",
-    "moment": "^2.24.0",
+    "moment": "^2.19.1",
     "vue": "^2.5.2",
-    "vue-preview": "^1.1.3",
-    "vue-resource": "^1.5.1",
+    "vue-preview": "^1.0.5",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.0.1"
   }
 }
